# libinput

./: .gitignore  .gitlab-ci.yml  README.md  circle.yml  configure.ac  meson.build  meson_options.txt
data/: 10-generic-keyboard.quirks  30-vendor-synaptics.quirks
doc/: Makefile.am  button_debouncing.dox  buttonsets.dox  clickpad-softbuttons.dox  device-configuration-via-udev.dox  device-quirks.dox  page-hierarchy.dox  pointer-acceleration.dox  switches.dox  tablet-support.dox  test-suite.dox  touchpad-direct-touch.dox
quirks/: 50-system-dell.quirks
src/: Makefile.am  evdev-buttonset-wacom.c  evdev-buttonset-wacom.h  evdev-debounce.c  evdev-fallback.c  evdev-middle-button.c  evdev-mt-touchpad-buttons.c  evdev-mt-touchpad-edge-scroll.c  evdev-mt-touchpad-gestures.c  evdev-mt-touchpad-tap.c  evdev-mt-touchpad.c  evdev-mt-touchpad.h  evdev-tablet-pad-leds.c  evdev-tablet-pad.c  evdev-tablet-pad.h  evdev-tablet.c  evdev-tablet.h  evdev-totem.c  evdev-touchpad.c  evdev.c  evdev.h  evfd-seat.c  evfd-seat.h  filter-custom.c  filter-private.h  filter-touchpad.c  filter-trackpoint.c  filter.c  filter.h  libinput-private.h  libinput-util.c  libinput-util.h  libinput.c  libinput.h  libinput.sym  path.c  path.h  quirks.c  quirks.h  udev-seat.c  (+2 more)
test/: 90-libinput-litest.rules  Makefile.am  build-pedantic.c  buttonset.c  device.c  gestures-pinch.c  gestures.c  keyboard.c  litest-bcm5974.c  litest-bcm5974.h  litest-device-bcm5974.c  litest-device-huion-pentablet.c  litest-device-keyboard-razer-blade-stealth-videoswitch.c  litest-device-keyboard-razer-blade-stealth.c  litest-device-magic-trackpad.c  litest-device-thinkpad-extrabuttons.c  litest-device-touch-screen.c  litest-device-wacom-cintiq-24hdt-pad.c  litest-device-wacom-ekr.c  litest-device-wacom-intuos3-pad.c  litest-device-wacom-intuos5-pad.c  litest-int.h  litest-keyboard.c  litest-keyboard.h  litest-setup.c  litest-synaptics-x1-carbon-3rd.c  litest-synaptics.c  litest-synaptics.h  litest-trackpoint.c  litest-trackpoint.h  litest.c  litest.h  misc.c  pad.c  path.c  pointer.c  tablet-pad.c  tablet.c  test-accel.c  test-misc.c  (+13 more)
tools/: .gitignore  Makefile.am  event-debug.c  event-gui.c  install-compat-scripts.sh  libinput-analyze-trackpoint.c  libinput-debug-events.c  libinput-debug-gui.c  libinput-list-devices.c  libinput-measure-fuzz  libinput-measure-touchpad-tap.1  libinput-measure-touchpad-tap.c  libinput-measure-trackpoint-range.1  libinput-measure-trackpoint-range.c  libinput-measure.man  libinput-record-verify-yaml.py  libinput-record.c  libinput-record.man  libinput-replay  libinput-replay.c  libinput-replay.man  libinput-tool.c  libinput-tool.h  libinput.1  libinput.man  make-ptraccel-graphs.sh  process-filter-debug.py  ptraccel-debug.c  shared.c  shared.h  userstudy-analysis.py  userstudy.c
tools/analysis/: ID-mapping-grouped.gnuplot  ID-mapping.gnuplot  ID-path-mapping-absolute.gnuplot  ID-path-mapping.gnuplot  ID-time-mapping.gnuplot  Makefile.am  hist-overshoot-for-distance-mean-grouped-by-ID.gnuplot  hist-overshoot-for-path-mean-grouped-by-ID.gnuplot  hist-overshoot-mean-grouped-by-ID.gnuplot  hist-path-absolute-mean-grouped-by-ID.gnuplot  hist-path-mean-grouped-by-ID.gnuplot  hist-questionnaire-likert-counts.gnuplot  hist-questionnaire-preferable-likert-count.gnuplot  hist-questionnaire-preferable.gnuplot  hist-questionnaire.gnuplot  hist-target-counts-grouped-by-ID.gnuplot  hist-time-to-click-mean-grouped-by-ID.gnuplot  vectors-all.gnuplot  vectors.gnuplot
udev/: 90-libinput-model-quirks.hwdb  libinput-device-group.c
